<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:background="@drawable/ic_comment_three_big">
               <TextView
                   android:id="@+id/tv_suggestion_title"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="50dp"
                   android:text="@string/liu_jian_yi_p"
                   android:paddingLeft="15dp"
                   android:paddingRight="15dp"
                   android:gravity="center"
                   android:textSize="18sp"
                   android:textColor="#FF9C00"/>
               <View
                   android:id="@+id/v_line1"
                   android:layout_marginTop="24dp"
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@drawable/dashed_line"/>
               <TextView
                   android:id="@+id/tv_suggestion_item_title"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingLeft="15dp"
                   android:paddingRight="15dp"
                   android:textSize="16sp"
                   android:layout_marginTop="9dp"
                   android:text="@string/jian_yin_item_title"
                   android:textColor="#FF9C00"/>
               <ListView
                   android:id="@+id/lv_suggestion_list"
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"
                   android:layout_marginTop="9dp"
                   android:layout_marginLeft="15dp"
                   android:layout_marginRight="15dp"
                   android:minHeight="150dp">
               </ListView>
               <TextView
                   android:id="@+id/tv_other_suggestion_title"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:paddingLeft="15dp"
                   android:paddingRight="15dp"
                   android:textSize="16sp"
                   android:text="@string/other_suggestion"
                   android:textColor="#FF9C00"/>
               <EditText
                   android:id="@+id/et_suggestion_edit"
                   android:layout_width="match_parent"
                   android:layout_height="80dp"
                   android:background="@drawable/suggestion_text_bg"
                   android:hint="@string/suggestion_hint"
                   android:padding="10dp"
                   android:minLines="10"
                   android:gravity="top"
                   android:textSize="13sp"
                   android:textColor="#A0A0A0"
                   android:textColorHint="#A0A0A0"
                   android:layout_marginTop="15dp"
                   android:layout_marginLeft="15dp"
                   android:layout_marginRight="15dp"
                   />
               <View
                   android:id="@+id/v_line2"
                   android:layout_marginTop="12dp"
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@drawable/dashed_line"/>
               <TextView

                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:paddingLeft="15dp"
                   android:paddingRight="15dp"
                   android:textSize="16sp"
                   android:text="@string/user_info_title"
                   android:textColor="#FF9C00"/>
               <LinearLayout
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:layout_marginTop="15dp"
                   android:layout_marginLeft="15dp"
                   android:layout_marginRight="15dp"
                   android:layout_marginBottom="32dp">
                   <EditText
                       android:id="@+id/et_user_name"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:background="@drawable/suggestion_text_bg"
                       android:hint="@string/uset_name"
                       android:textSize="12sp"
                       android:layout_marginRight="10dp"
                       android:paddingLeft="5dp"
                       android:textColor="#A0A0A0"
                       android:textColorHint="#A0A0A0"/>
                   <EditText
                       android:id="@+id/et_user_contact"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:background="@drawable/suggestion_text_bg"
                       android:hint="@string/uset_contact"
                       android:textSize="12sp"
                       android:layout_marginLeft="10dp"
                       android:paddingLeft="5dp"
                       android:inputType="number|phone|textEmailAddress"
                       android:textColor="#A0A0A0"
                       android:textColorHint="#A0A0A0"/>
               </LinearLayout>
           </LinearLayout>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="12dp">
               <Button
                   android:id="@+id/b_cancel"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="48dp"
                   android:text="@string/cancel"
                   android:textSize="18sp"
                   android:layout_marginLeft="5dp"
                   android:layout_marginRight="5dp"
                   android:textColor="#FFFFFF"
                   android:visibility="gone"
                   android:background="@drawable/ti_jiao_bg"/>

               <Button
                   android:id="@+id/b_ti_jiao"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="48dp"
                   android:text="@string/feedback_commit"
                   android:textSize="18sp"
                   android:textColor="#FFFFFF"
                   android:layout_marginLeft="5dp"
                   android:layout_marginRight="5dp"
                   android:background="@drawable/ti_jiao_bg"/>

           </LinearLayout>

       </LinearLayout>
   </ScrollView>
    <ProgressBar
        android:id="@+id/pb_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">
    </ProgressBar>
</FrameLayout>