<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/feedback_input_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onClick_back"
        android:src="@mipmap/feedback_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/feedback_text"
            android:textColor="@color/feedback_input_title_color"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/feedback_desc"
            android:textColor="@color/feedback_input_desc_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/feedback_content_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="8dp"
            android:background="@color/feedback_input_content_bg_color"
            android:layout_weight="1"
            android:gravity="left"
            android:hint="@string/feedback_input_placeholder"
            android:textColor="@color/feedback_input_content_color"
            android:textColorHint="@color/feedback_input_content_color"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/input_contact_title_required"
                android:textColor="@color/feedback_input_contact_label_color"
                android:textSize="12sp" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                >

                <EditText
                    android:id="@+id/information"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/feedback_input_content_bg_color"
                    android:hint="@string/input_contact_placeholder"
                    android:textColor="@color/feedback_input_contact_content_color"
                    android:textColorHint="@color/feedback_input_contact_content_color"
                    android:gravity="bottom"
                    android:textSize="12sp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                   />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/commit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:background="@mipmap/feedback_send"
            android:gravity="center"
            android:onClick="commit"
            android:text="@string/commit"
            android:textColor="@color/feedback_input_send_text_color"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/feedback_input_separator_color"
                android:gravity="center"
                android:textSize="12sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/contact_us"
                android:textColor="@color/feedback_input_contact_us_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/feedback_input_separator_color"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/qq"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:onClick="clickQQ"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/feedback_qq"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/qq_contact"
                        android:textColor="@color/feedback_input_contact_method_text_color"
                        android:textSize="12sp"/>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:id="@+id/email"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:onClick="onClick"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/feedback_email"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/email_contact"
                        android:textColor="@color/feedback_input_contact_method_text_color"
                        android:textSize="12sp"/>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
